k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jonbot
spec:
  selector:
    app: jonbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
